# gciGps

./: .gitignore  LICENSE  readme.md
.github/workflows/: cpp.yaml  python.yaml
cpp/: CMakeLists.txt  keywords.txt  library.properties  readme.md
cpp/examples/: CMakeLists.txt  simple.cpp  token.cpp
cpp/examples/gps/: gps.ino
cpp/gtests/: CMakeLists.txt  main.cpp
cpp/src/: gcigps.hpp  gps.hpp  gps_msgs.hpp  mtk.hpp  parser.hpp
data/: get_gps.py  gps_parse.py
data/raw/: data.gzip
docs/: gps.md  gps_error.md
docs/notebooks/: gps.ipynb  old_gps.ipynb  read_data.ipynb
pico/: CMakeLists.txt  readme.md
pico/examples/: CMakeLists.txt  gps.cpp
python/: pyproject.toml  readme.md
python/examples/: gps_parse.py
python/gcigps/: __init__.py  gps_cntrl.py  messages.py  parser.py
python/tests/: test_gps.py
